--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.0.0"
   },
   "scripts": {
